--- a/kubinec_model_preprint.Rmd
+++ b/kubinec_model_preprint.Rmd
@@ -1228,10 +1228,8 @@ init_vals <- function() {
        M_sigma=rep(1,real_data$G),
        country_test_raw=rep(0,real_data$num_country),
        country_test_raw2=rep(0,real_data$num_country),
-       country_test_raw3=rep(0,real_data$num_country),
-       mu_test_raw=rep(0,real_data$num_country),
-       mu_test_raw2=rep(0,real_data$num_country),
-       mu_test_raw3=rep(0,real_data$num_country),
+       mu_test_raw=0,
+       mu_test_raw2=0,
        mu_poly=rep(0,3),
        sigma_poly=rep(1,3),
        poly1=rep(0,real_data$num_country),
