--- a/kubinec_model_preprint.Rmd
+++ b/kubinec_model_preprint.Rmd
@@ -82,11 +82,17 @@ state_filter <- c('AL', 'AK', 'AZ', 'AR', 'CA', 'CO', 'CT', 'DE', 'NA', 'FL', 'G
 # what type of model to fit
 # one of prior_expert, prior_only or full (includes likelihood)
 
-model_type <- "prior_expert"
+model_type <- "full"
 
 # set treedepth (determines sampler complexity)
 
-treedepth <- 13
+treedepth <- 10
+
+nchains <- 4
+
+nsamples <- 4000
+
+adapt_delta <- 0.95
 
 # whether to run model (it will take a few hours) or load saved model from disk
 
@@ -1214,7 +1220,7 @@ real_data <- list(time_all=length(unique(combined$month_day)),
                  sero_row_real=serology_real$key,
                  country_pop=floor(combined$state_pop),
                  cases=cases_matrix_num[,1],
-                 phi_scale=c(.001,.0001),
+                 phi_scale=c(1,1),
                  fear=just_data$trendline_extremely_concerned,
                  test_max=combined$test_max,
                  count_outbreak=time_outbreak,
@@ -1234,10 +1240,11 @@ real_data <- list(time_all=length(unique(combined$month_day)),
 saveRDS(real_data,"real_data.rds")
 
 init_vals <- function() {
-  list(phi_raw=c(.001,.0001),
+  list(phi_raw=c(.8,1),
+    #phi_raw=c(.001,.0001),
        world_infect=0.1,
-       finding=0.1,
-       test_baseline=0.1,
+       finding=5,
+       test_baseline=5,
        mob_alpha_const=rep(0,real_data$G),
        suppress_effect_raw=rep(0,real_data$S),
        lockdown_effect_raw=rep(0,real_data$L),
@@ -1248,17 +1255,10 @@ init_vals <- function() {
        mu_test_raw=0,
        mu_test_raw2=0,
        mu_poly=rep(0,3),
-       sigma_poly=rep(1,3),
-       poly1=rep(0,real_data$num_country),
-       poly2=rep(0,real_data$num_country),
-       poly3=rep(0,real_data$num_country),
-       #sero_est=serology$inf_pr,
        pcr_spec=-6,
-       sigma_test_raw=0.01,
-       sigma_test_raw2=0.01,
-       sigma_test_raw3=0.01,
-       sigma_policy=c(1,1,1),
-       alpha_infect=-6,
+       sigma_test_raw=.1,
+       sigma_test_raw2=.1,
+       alpha_infect=-3,
        alpha_test=-6,
        sigma_fear=1)
 }
@@ -1282,11 +1282,13 @@ if(run_model) {
   
    us_fit_scale_mod <- pan_model_scale$sample(data=real_data,
                            threads_per_chain = 4,init=init_vals,
-                           iter_warmup = 500,
-                           iter_sampling = 500,
+                           iter_warmup = nsamples/2,
+                           iter_sampling = nsamples/2,
+                           thin=2,
                            max_treedepth = treedepth,
-                           chains=2,
-                           parallel_chains = 2)
+                           adapt_delta=adapt_delta,
+                           chains=nchains,
+                           parallel_chains = nchains)
    
    us_fit_scale_mod$save_object("data/us_fit_scale_mod.rds")
   
@@ -1304,6 +1306,14 @@ if(run_model) {
 }
 
 summaries <- readRDS("data/rhat_summaries.rds")
+
+# check treedepth
+
+mean_sampler_stats <- apply(us_fit_scale_mod$sampler_diagnostics(),c(2:3), 
+                            mean)
+
+max_sampler_stats <- apply(us_fit_scale_mod$sampler_diagnostics(),c(2:3), 
+                           max)
 
 
 ```
