--- a/BibTexDatabase.bib
+++ b/BibTexDatabase.bib
@@ -15463,3 +15463,26 @@ PMID: 32554604},
 	url = {https://www.nature.com/articles/s41597-020-00610-2},
 	langid = {en}
 }
+
+@article{katz,
+	title = {COVID AMP: An Open Access Database of COVID-19 Response Policies},
+	author = {Katz, Rebecca and Toole, Kate and Robertson, Hailey and Case, Alaina and Kerr, Justin and Robinson-Marshall, Siobhan and Schermerhorn, Jordan and Orsborn, Sarah and Maele, Michael Van and Zimmerman, Ryan and Stevens, Tess and Team, COVID AMP Coding and Phelan, Alexandra and Carlson, Colin and Graeden, Ellie},
+	doi = {10.1101/2023.05.01.23289163},
+	langid = {en}
+}
+
+@article{mcandrew2022,
+	title = {An expert judgment model to predict early stages of the COVID-19 pandemic in the United States},
+	author = {McAndrew, Thomas and Reich, Nicholas G.},
+	year = {2022},
+	month = {09},
+	date = {2022-09-23},
+	journal = {PLOS Computational Biology},
+	pages = {e1010485},
+	volume = {18},
+	number = {9},
+	doi = {10.1371/journal.pcbi.1010485},
+	url = {https://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1010485},
+	note = {Publisher: Public Library of Science},
+	langid = {en}
+}
